更新组件库版本

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 python-dotenv==1.0.0
-langchain==0.1.4
-langchain-community==0.0.16
-langchain-experimental==0.0.49
-langchain_openai==0.0.5
-openai==1.10.0
+langchain==0.1.11
+langchain-community==0.0.25
+langchain-experimental==0.0.53
+langchain_openai==0.0.8
+openai==1.13.3
 tiktoken==0.5.2
-langchain-google-genai==0.0.6
-google-generativeai==0.3.2
+langchain-google-genai==0.0.9
+google-generativeai==0.4.0
+pillow==10.2.0
